# lc-esp32-sprinkler

./: .clang-format  .gitignore  CMakeLists.txt  README.md
+pcb/lc-sprinker/: lc-sprinkler-relay-power.kicad_prl  lc-sprinkler.kicad_prl  lc-sprinkler.kicad_pro
+pcb/lc-sprinker/esp32-control-board/: esp32-control-board.kicad_prl  esp32-control-board.kicad_pro  esp32-control-board.kicad_sch
+pcb/lc-sprinker/power-relay-board/: power-relay-board.kicad_prl  power-relay-board.kicad_pro  power-relay-board.kicad_sch
+pcb/lc-sprinkler-esp32/: lc-sprinkler-esp32.kicad_prl  lc-sprinkler-esp32.kicad_pro
+pcb/lc-sprinkler-esp32-control/: lc-sprinkler-esp32-control.kicad_prl  lc-sprinkler-esp32-control.kicad_pro
+pcb/lc-sprinkler-relay-power/: lc-sprinkler-relay-power.kicad_pro
.github/workflows/: esp-idf.yml  sdl2.yml
esp-idf/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp-idf/components/esp-sprinkler/: CMakeLists.txt  ssd-1306-display.hpp
esp-idf/components/lc-sprinkler-esp/: CMakeLists.txt
esp-idf/components/lc-sprinkler-esp/lib/esp/: ssd-1306-display.cpp  ssd-1306-display.hpp
esp-idf/components/lcSprinkler/: CMakeLists.txt
esp-idf/components/sprinkler/: CMakeLists.txt
esp-idf/components/sprinkler/esp/: ssd-1306-display.cpp  ssd-1306-display.hpp
esp-idf/main/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  README.md
lib-lc-sprinkler/: CMakeLists.txt  README.md
lib-lc-sprinkler/cmake/: config.cmake.in  lcSprinklerConfigVersion.cmake.in  pkg-config.pc.in
lib-lc-sprinkler/include/components/: info-bar.hpp
lib-lc-sprinkler/include/sprinkler/: app.hpp  color.hpp  constants.hpp  display.hpp  input-event.hpp  widget.hpp
lib-lc-sprinkler/src/components/: info-bar.cpp
lib-lc-sprinkler/src/sprinkler/: app.cpp  display.cpp  string-utils.cpp  transform.cpp  w-frame.cpp  widget.cpp
lib-lc-widgets/: .clang-format  CMakeLists.txt
lib-lc-widgets/cmake/: config.cmake.in  pkg-config.pc.in
lib-lc-widgets/include/app/: app.hpp
lib-lc-widgets/include/constants/icons/: wifi.hpp
lib-lc-widgets/include/display/: display.hpp
lib-lc-widgets/include/fonts/: medium.h  small.h
lib-lc-widgets/include/gfx/: color.hpp  image.hpp
lib-lc-widgets/include/gfx/primitives/: point.hpp  rect.hpp  transform.hpp
lib-lc-widgets/include/icons/: icon.hpp  wifi.hpp
lib-lc-widgets/include/input/: input-event-handler.hpp  input-event.hpp
lib-lc-widgets/include/utils/: string-utils.hpp
lib-lc-widgets/include/widgets/: app.hpp  color.hpp  display.hpp  input-event-handler.hpp  input-event.hpp  string-utils.hpp  transform.hpp  w-frame.hpp  w-icon-stateful.hpp  w-icon.hpp  widget.hpp
lib-lc-widgets/src/display/: display.cpp
lib-lc-widgets/src/gfx/primitives/: point.cpp
lib-lc-widgets/src/utils/: string-utils.cpp
lib-lc-widgets/src/widgets/: app.cpp  display.cpp  string-utils.cpp  transform.cpp  w-frame.cpp  widget.cpp
lib/lcSprinkler/: CMakeLists.txt
lib/lcSprinkler/src/sprinkler/app/: app.cpp  app.hpp
lib/lcSprinkler/src/sprinkler/gfx/: color.hpp  display.cpp  display.hpp  transform.cpp  transform.hpp
lib/lcSprinkler/src/sprinkler/input/: input-event-handler.hpp
lib/src/ada-font/: gfxfont.h
lib/src/sprinkler/app/: app.cpp  app.hpp
lib/src/sprinkler/gfx/: color.hpp  display.cpp  display.hpp  transform.cpp  transform.hpp
lib/src/sprinkler/input/: input-event-handler.hpp  input-event.hpp
lib/src/sprinkler/util/: string-utils.cpp  string-utils.hpp
lib/src/sprinkler/widget/: w-frame.cpp  w-frame.hpp  widget.cpp  widget.hpp
sdl2/: CMakeLists.txt
sdl2/lib/sdl2/: sdl-constants.hpp  sdl-display.cpp  sdl-display.hpp  sdl-input-transcriber.cpp  sdl-input-transcriber.hpp  sdl-output-visualizer.cpp  sdl-output-visualizer.hpp  sdl-preferences.cpp  sdl-preferences.hpp  sdl-utils.hpp  sdl-window-icon.hpp
sdl2/src/: main.cpp
